--- a/index.html
+++ b/index.html
@@ -31,8 +31,21 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
+     let results = 0;
+      for(let idx = 0; idx < nums.length; idx++){
+        let element = nums[idx]
 
+      if(typeof element === 'number'){
+        if(element === 13){
+          return "I'm too superstitious!"
+        }
+        results += element
+      }
+      }
+      
+      return results
     }
+      
 
     // 👉 CHALLENGE 2
     // 🧠 The function stripVowels takes a string, strips all lowcase vowel letters (a,e,i,o,u) from it and returns it.
