--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
           results.push(char);
         }
       }
-    return results.join('') 
-
+      return results.join('');
     }
 
     // 👉 CHALLENGE 3
@@ -185,7 +184,25 @@
     // nestedLoops(['hello', 'goodbye']) // should return ['hEllO', 'gOOdbyE']
     // ❗ Notes:
     // 🧠 To capitalize a string you can use its toUpperCase method: "a".toUpperCase() returns "A"
-    function nestedLoops() {
+    function nestedLoops(arr) {
+      let result = [];
+      for(let idx in arr){
+        let word = arr[idx];
+
+          let modifiedWord = ''
+        for(let idx in word){
+          let char = word[idx]
+          if(char === 'a' || char === 'e' || char === 'i' || char === 'o' || char === 'u' ){
+            let upperCased = char.toUpperCase();
+            modifiedWord += upperCased
+          } else {
+            modifiedWord += char
+          }
+
+        }
+        result.push(modifiedWord)
+      }
+      return result
 
     }
 
@@ -200,8 +217,14 @@
     // 🧠 Practice using pop and slice.
     // 🧠 Note that pop modifies the original array in place and returns the "popped" element, whereas slice gives us a brand new array.
     function crazyTrimmer(arr) {
+    if (arr.length % 2 === 0) {
+      arr.pop()
+      return arr
+    } else {
+       return arr.slice(1, arr.length - 1)
+      } 
+      }
 
-    }
 
     // 🧪 TESTS, do not work below this line
     // 🧪 TESTS, do not work below this line
